syntax = "proto3";

package auth;

import "_protovalidate/proto/protovalidate/buf/validate/validate.proto";

option go_package = "postique.sso.v1;pb";

service Auth {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string email = 1 [(buf.validate.field).string = {email: true, max_len: 256}];
    string password = 2 [(buf.validate.field).string = {min_len: 6, max_len: 64}];
}

message RegisterResponse {
    string user_id = 1;
}

message LoginRequest {
    string email = 1 [(buf.validate.field).string = {email: true}];
    string password = 2 [(buf.validate.field).string = {min_len: 6}];
    string app_name = 3 [(buf.validate.field).string = {min_len: 2}];
}

message LoginResponse {
    string token = 1;
}
